# DigitalHumanAndroid

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: Solid.frag.spv  ampl.comp.spv  background.frag.spv  background.vert.spv  ceramic.frag.spv  ceramic.vert.spv  cull.comp.spv  ifft2.comp.spv  moosaic.comp.spv  ocean.frag.spv  ocean.vert.spv  ocean0.vert.spv  pbr.frag.spv  pbr.vert.spv  phong.frag.spv  phong.vert.spv  sign.comp.spv  sky.frag.spv  sky.vert.spv  yuv420p2rgb.comp.spv
app/src/main/cpp/: CMakeLists.txt  CreateAssets.cpp  PoseApp.cpp  PoseApp.h  PoseDetection.cpp  PoseDetection.hpp  PoseDetectionCamImage.cpp  VulkanBridgeJNI.cpp  VulkanPoseDetectionSurfaceViewJNI.cpp  native-lib.cpp
app/src/main/cpp/CraneGraphicsAndroid/: Actor.cpp  Actor.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Input.hpp  Utils.cpp  Utils.hpp
app/src/main/cpp/CraneGraphicsAndroid/AssetLoad/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  material_asset.cpp  texture_asset.cpp
app/src/main/cpp/CraneGraphicsAndroid/Module/OceanFFT/: CMakeLists.txt  Ocean.cpp  Ocean.hpp  OceanAmpl.cpp  OceanAmpl.hpp
app/src/main/cpp/CraneGraphicsAndroid/Physics/: AABBTree.cpp  AABBTree.hpp  BVH.cpp  BVH.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Constraint.cpp  Constraint.hpp  Intersect.cpp  Intersect.hpp  PositionBasedDynamics.cpp  PositionBasedDynamics.hpp  Rigidbody.cpp  Rigidbody.hpp  Voxelize.cpp  Voxelize.hpp
app/src/main/cpp/CraneGraphicsAndroid/Render/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Command.cpp  Cull.cpp  DataStruct.hpp  Draw.cpp  GlobalAsset.cpp  GlobalPass.cpp  Image.cpp  Image.hpp  Logging.hpp  MaterialSystem.cpp  MaterialSystem.hpp  MeshBase.cpp  MeshBase.hpp  Render.cpp  Render.hpp  RenderableBase.hpp  Swapchain.cpp  Utils.cpp  vk_mem_alloc.h
app/src/main/cpp/PirateNdkEngine/: CameraNDK.h  (+7 more)
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
